frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  imagePullSecrets:
    - name: regcred
  volumes:
    - name: static-volume
      persistentVolumeClaim:
        claimName: backend-pvc
  containers:
    - name: frontend
      image: unlimitedbiking/review-frontend
      command: ["sh", "-c", "cp -r /app/dist/. /app/data"]
#      command: ['sh', '-c', 'echo The app is running! && sleep 3600']
      volumeMounts:
        - name: static-volume
          mountPath: "/app/data"
