nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: static-volume
        persistentVolumeClaim:
          claimName: backend-pvc
      - name: nginx-config
        configMap:
          name: nginx-config-file
      containers:
      - name: nginx
        image: nginx:alpine
        volumeMounts:
        - name: static-volume
          mountPath: "/home/app/web/staticfiles"
        - name: static-volume
          mountPath: "/usr/share/nginx/html"
        - name: nginx-config
          mountPath: "/etc/nginx/conf.d/default.conf"
          subPath: "default.conf"
        ports:
        - containerPort: 80
