backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: admin.unlimitedbiking.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
